@@ -3,6 +3,8 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.21rc2
 
+	- String options with quotes in their values were not
+	  quoted properly by the scheduler (STR #839)
 	- Configure script changes for GNU/Hurd (STR #838)
 	- The lppasswd program was not installed properly by GNU
 	  install when the installer was not root (STR #836)
